syntax = "proto3";
package proto;
option go_package = "proto/";

message User{
    string name = 1;
    string class = 2;
    int64 roll = 3;
}
message SearchQuery{
    string query = 1;
}
service AddService{
    rpc GetMockUserData(SearchQuery) returns (User);
}